--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 
-<!DOCTYPE html>
+
+
+
 <html lang="en">
+<!DOCTYPE html>
 <head>
     <meta charset="UTF-8">
     <title>fCC Cat Painting</title>
@@ -8,7 +11,11 @@
 </head>
 <body>
     <main>
-      <div class="cat-head">
+    
+        
+        <h1> Buenas noches</h1>    
+                <h2> Buenas noches</h2>    
+            <div class="cat-head">
         <div class="cat-ears">
           <div class="cat-left-ear">
             <div class="cat-left-inner-ear"></div>
