--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
         
         <h1> Buenas noches</h1>    
-                <h2> Buenas noches</h2>    
+                <h2> gatita</h2>    
             <div class="cat-head">
         <div class="cat-ears">
           <div class="cat-left-ear">
