--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <title>fCC Cat Painting</title>
     <link rel="stylesheet" href="style.css">
+<script src="#"> </script>
 </head>
 <body>
     <main>
